style: remove default paragraph margin from table header cells to fix vertical misalignment in exports

--- a/src/index.css
+++ b/src/index.css
@@ -235,7 +235,8 @@ html[data-tp-theme="light"] .ProseMirror th {
   font-size: 13px;
 }
 
-.ProseMirror td > p {
+.ProseMirror td > p,
+.ProseMirror th > p {
   margin: 0;
 }
 
